link to own repo

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <li><article class="hentry">
                 <header>
-                    <h1><a href="http://maegul.github.io/basic_pelican_test/my-third-post.html" rel="bookmark"
+                    <h1><a href="http://isakiko.github.io/basic_pelican_test/my-third-post.html" rel="bookmark"
                            title="Permalink to My third post">My third post</a></h1>
                 </header>
 
@@ -127,7 +127,7 @@
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-                <a class="readmore" href="http://maegul.github.io/basic_pelican_test/my-third-post.html">read more</a>
+                <a class="readmore" href="http://isakiko.github.io/basic_pelican_test/my-third-post.html">read more</a>
                 </div><!-- /.entry-content -->
             </article></li>
                 </ol><!-- /#posts-list -->
